# discord-webhook

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DiscordWebHook/: DiscordWebHook.cpp  DiscordWebHook.h
